feature: worked on the osl web and some integration, also added the backend code setup for osl backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,29 @@
   "name": "orchidsprings-backend",
   "version": "2.0.0",
   "description": "The orchid springs backend service",
-  "main": "index.js",
+  "main": "server.js",
   "author": "Irobuisi Chibuzor",
   "license": "MIT",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "express": "^4.19.2"
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.0",
+    "nanoid": "^5.0.6",
+    "nodemailer": "^6.9.13"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
