--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.16.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "framer-motion": "^11.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
